--- a/Backend/MyGarage/pom.xml
+++ b/Backend/MyGarage/pom.xml
@@ -11,6 +11,9 @@
 	<groupId>Garage</groupId>
 	<artifactId>MyGarage</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
+	<packaging>jar</packaging>
+	
 	<name>MyGarage</name>
 	<description>MyGarage</description>
 	<properties>
@@ -20,6 +23,10 @@
 			<dependency>
 			   <groupId>org.springframework.boot</groupId>
 			   <artifactId>spring-boot-starter-data-jpa</artifactId> 
+			</dependency>
+			<dependency>
+			   <groupId>org.springframework.boot</groupId>
+			   <artifactId>spring-boot-starter-actuator</artifactId> 
 			</dependency>
 			<dependency>
 			<groupId>org.springframework.boot</groupId>
