--- a/Backend/MyGarage/pom.xml
+++ b/Backend/MyGarage/pom.xml
@@ -58,8 +58,16 @@
 			<version>2.9.2</version>
 		</dependency>
 	</dependencies>
-	<build> 
+	<build>
 		<plugins>
+			<plugin>  
+        		<groupId>org.apache.maven.plugins</groupId>  
+        		<artifactId>maven-surefire-plugin</artifactId>  
+        		<version>2.22.2</version>  
+        		<configuration>  
+          			<skipTests>true</skipTests>  
+        		</configuration>  
+			</plugin>  
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
