--- a/Backend/MyGarage/src/main/resources/application.properties
+++ b/Backend/MyGarage/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1/mygarage
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.username=doadmin
+spring.datasource.password=AVNS_K8_i71dkKU3sR5opgDq
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
-server.port=8080
+server.port=25060
 spring.jackson.serialization.fail-on-empty-beans=false
 #spring.main.allow-circular-references=true
