--- a/Backend/MyGarage/src/main/resources/application.properties
+++ b/Backend/MyGarage/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1/mygarage
+#spring.datasource.url=jdbc:mysql://127.0.0.1/mygarage
+spring.datasource.url = jdbc:mysql://mygarage-do-user-12175743-0.b.db.ondigitalocean.com:25060/defaultdb?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&requireSSL=true&serverTimezone=UTC
 spring.datasource.username=doadmin
 spring.datasource.password=AVNS_K8_i71dkKU3sR5opgDq
 spring.jpa.show-sql=true
