--- a/Backend/MyGarage/src/main/resources/application.properties
+++ b/Backend/MyGarage/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://127.0.0.1/mygarage
-spring.datasource.url = jdbc:mysql://mygarage-do-user-12175743-0.b.db.ondigitalocean.com:25060/defaultdb?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&requireSSL=true&serverTimezone=UTC
-spring.datasource.username=doadmin
-spring.datasource.password=AVNS_K8_i71dkKU3sR5opgDq
+spring.datasource.url=jdbc:mysql://127.0.0.1/mygarage
+spring.datasource.username=root
+spring.datasource.password=12345momlje
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
-server.port=25060
+server.port=8080
 spring.jackson.serialization.fail-on-empty-beans=false
 #spring.main.allow-circular-references=true
