--- a/Backend/MyGarage/src/main/resources/application-deployment.properties
+++ b/Backend/MyGarage/src/main/resources/application-deployment.properties
@@ -1,3 +1,5 @@
-spring.datasource.url=jdbc:mysql://mygarage-do-user-12175743-0.b.db.ondigitalocean.com:25060/defaultdb?verifyServerCertificate=true&useSSL=true&requireSSL=true
+spring.datasource.url=jdbc:mysql://mygarage-do-user-12175743-0.b.db.ondigitalocean.com:25060/defaultdb
 spring.datasource.username=doadmin
 spring.datasource.password=AVNS_K8_i71dkKU3sR5opgDq
+spring.datasource.hikari.connection-timeout=600000
+spring.datasource.hikari.read-timeout=600000
