--- a/Backend/MyGarage/src/main/resources/application-deployment.properties
+++ b/Backend/MyGarage/src/main/resources/application-deployment.properties
@@ -3,3 +3,4 @@ spring.datasource.username=doadmin
 spring.datasource.password=AVNS_K8_i71dkKU3sR5opgDq
 spring.datasource.hikari.connection-timeout=600000
 spring.datasource.hikari.read-timeout=600000
+spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
