--- a/Backend/MyGarage/src/main/resources/application-deployment.properties
+++ b/Backend/MyGarage/src/main/resources/application-deployment.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=jdbc:mysql://mygarage-do-user-12175743-0.b.db.ondigitalocean.com:25060/defaultdb
 spring.datasource.username=doadmin
 spring.datasource.password=AVNS_K8_i71dkKU3sR5opgDq
-spring.datasource.hikari.connection-timeout=600000
-spring.datasource.hikari.read-timeout=600000
+spring.datasource.hikari.connection-timeout=6000
+spring.datasource.hikari.read-timeout=6000
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.dialect.storage_engine=innodb
 spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
