--- a/Backend/MyGarage/src/main/resources/application.properties
+++ b/Backend/MyGarage/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=12345momlje
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 server.port=8080
 spring.jackson.serialization.fail-on-empty-beans=false
 #spring.main.allow-circular-references=true
