--- a/Backend/MyGarage/src/main/resources/application-deployment.properties
+++ b/Backend/MyGarage/src/main/resources/application-deployment.properties
@@ -3,7 +3,7 @@ spring.datasource.username=doadmin
 spring.datasource.password=AVNS_K8_i71dkKU3sR5opgDq
 spring.datasource.hikari.connection-timeout=6000
 spring.datasource.hikari.read-timeout=6000
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.dialect.storage_engine=innodb
 spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.hibernate.ddl-auto=none
