--- a/Backend/MyGarage/src/main/resources/application-ssl.properties
+++ b/Backend/MyGarage/src/main/resources/application-ssl.properties
@@ -1,4 +1,4 @@
-server.ssl.key-store=classpath:keystore/baeldung.p12
+server.ssl.key-store=classpath:baeldung.p12
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store-password=password
 server.ssl.key-alias=baeldung
