--- a/Backend/MyGarage/src/main/resources/application-ssl.properties
+++ b/Backend/MyGarage/src/main/resources/application-ssl.properties
@@ -1,7 +1,6 @@
-server.ssl.key-store=classpath:baeldung.p12
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store-password=password
-server.ssl.key-alias=baeldung
 server.port=8443
-
 server.ssl.enabled=true
+server.ssl.key-store=classpath:baeldung.p12
+server.ssl.keystoretype=PKCS12
+server.ssl.key-store-password=password
+server.ssl.keyalias=baeldung
