--- a/Backend/MyGarage/src/main/resources/application-ssl.properties
+++ b/Backend/MyGarage/src/main/resources/application-ssl.properties
@@ -1,6 +1,6 @@
 server.port=8443
 server.ssl.enabled=true
-server.ssl.key-store=classpath:baeldung.p12
+server.ssl.key-store=classpath:mydomain_com.p12
 server.ssl.keystoretype=PKCS12
 server.ssl.key-store-password=password
-server.ssl.keyalias=baeldung
+server.ssl.keyalias=mydomain
