--- a/Backend/MyGarage/src/main/resources/application-ssl.properties
+++ b/Backend/MyGarage/src/main/resources/application-ssl.properties
@@ -3,4 +3,4 @@ server.ssl.enabled=true
 server.ssl.key-store=classpath:mydomain_com.p12
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store-password=password
-server.ssl.key-alias=mydomain
+server.ssl.key-alias=mydomain_com
