--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -20,7 +20,7 @@
     "ws": "^8.8.1"
   },
   "scripts": {
-    "start": "set HTTPS=true&&react-scripts start",
+    "start": "set HTTPS=true PORT=8443&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
