--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -20,10 +20,8 @@
     "ws": "^8.8.1"
   },
   "scripts": {
-    "start": "set HTTPS=true&&PORT=8443&&SSL_CRT_FILE=/ssl/cert.pem&&SSL_KEY_FILE=/ssl/key.pem&&react-scripts start",
+    "start": "set HTTPS=true PORT=8443&&react-scripts start",
     "build": "react-scripts build",
-    "ssl-linux": "export HTTPS=true&&SSL_CRT_FILE=/ssl/cert.pem&&SSL_KEY_FILE=/ssl/key.pem craco start",
-    "ssl-win": "set HTTPS=true&&SSL_CRT_FILE=/ssl/cert.pem&&SSL_KEY_FILE=/ssl/key.pem&&npm start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
