--- a/Backend/MyGarage/src/main/resources/application-ssl.properties
+++ b/Backend/MyGarage/src/main/resources/application-ssl.properties
@@ -1,6 +1,9 @@
-server.port=8443
-server.ssl.enabled=true
-server.ssl.key-store=classpath:baeldung.p12
-server.ssl.keystoretype=PKCS12
-server.ssl.key-store-password=password
-server.ssl.keyalias=baeldung
+
+server:
+  ssl:
+    key-store: classpath:keystore.p12
+    key-store-password: password
+    key-store-type: pkcs12
+    key-alias: springboot
+    key-password: password
+  port: 8443
