--- a/Backend/MyGarage/src/main/resources/application-ssl.properties
+++ b/Backend/MyGarage/src/main/resources/application-ssl.properties
@@ -4,3 +4,13 @@ server.ssl.key-store=classpath:baeldung.p12
 server.ssl.keystoretype=PKCS12
 server.ssl.key-store-password=password
 server.ssl.keyalias=baeldung
+
+#
+#server:
+#  ssl:
+#    key-store: classpath:keystore.p12
+#    key-store-password: password
+#    key-store-type: pkcs12
+#    key-alias: springboot
+#    key-password: password
+#  port: 8443
