--- a/Backend/MyGarage/src/main/resources/application-ssl.properties
+++ b/Backend/MyGarage/src/main/resources/application-ssl.properties
@@ -1,9 +1,9 @@
 server.port=8443
 server.ssl.enabled=true
-server.ssl.key-store=classpath:baeldung.p12
-server.ssl.keystoretype=PKCS12
-server.ssl.key-store-password=password
-server.ssl.keyalias=baeldung
+server.ssl.key-store=classpath:mygarage.link.csr
+server.ssl.keystoretype=CSR
+server.ssl.key-store-password=12345password
+server.ssl.keyalias=mygarage.link
 
 #
 #server:
