--- a/Backend/MyGarage/src/main/resources/application-ssl.properties
+++ b/Backend/MyGarage/src/main/resources/application-ssl.properties
@@ -1,7 +1,7 @@
 server.port=8443
 server.ssl.enabled=true
 server.ssl.key-store=classpath:mygarage.link.csr
-server.ssl.keystoretype=CSR
+server.ssl.keystoretype=csr
 server.ssl.key-store-password=12345password
 server.ssl.keyalias=mygarage.link
 
