--- a/Backend/MyGarage/src/main/resources/application-ssl.properties
+++ b/Backend/MyGarage/src/main/resources/application-ssl.properties
@@ -1,9 +1,9 @@
 server.port=8443
 server.ssl.enabled=true
-server.ssl.key-store=classpath:mygarage.p12
-server.ssl.keystoretype=PKCS12
-server.ssl.key-store-password=password
-server.ssl.keyalias=mygarage
+server.ssl.key-store: /etc/letsencrypt/live/backend.mygarage.link/springboot_letsencrypt.p12 
+server.ssl.key-store-password: password
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: bootalias
 #
 #server:
 #  ssl:
