--- a/Backend/MyGarage/src/main/resources/application.properties
+++ b/Backend/MyGarage/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1/mygarage
 spring.datasource.username=root
-spring.datasource.password=12345momlje
+spring.datasource.password=0527228514
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.hibernate.ddl-auto=update
