--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -16,6 +16,7 @@
     "react-innertext": "^1.1.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "reactjs-localstorage": "^1.0.1",
     "web-vitals": "^2.1.4",
     "ws": "^8.8.1"
   },
