--- a/Backend/MyGarage/src/main/resources/application.properties
+++ b/Backend/MyGarage/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localHost/mygarage
+spring.datasource.url=jdbc:mysql://127.0.0.1/mygarage
 spring.datasource.username=root
 spring.datasource.password=0527228514
 spring.jpa.show-sql=true
