--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "reactjs-localstorage": "^1.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.8.1"
   },
   "scripts": {
     "start": "set HTTPS=true PORT=8443&&react-scripts start",
