--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "reactjs-localstorage": "^1.0.1",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4",
     "ws": "^8.8.1"
   },
